awen-runtime/tests/ui/compile_fail_simulated_device.stderr
error[E0603]: struct `SimulatedDevice` is private
 --> tests/ui/compile_fail_simulated_device.rs:4:32
  |
4 |     let _ = awen_runtime::hal::SimulatedDevice::new();
  |                                ^^^^^^^^^^^^^^^ private struct
  |
note: the struct `SimulatedDevice` is defined here
 --> src/hal/mod.rs
  |
  | pub(crate) struct SimulatedDevice;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0624]: associated function `new` is private
 --> tests/ui/compile_fail_simulated_device.rs:4:49
  |
4 |     let _ = awen_runtime::hal::SimulatedDevice::new();
  |                                                 ^^^ private associated function
  |
 ::: src/hal/mod.rs
  |
  |     pub(crate) fn new() -> Self {
  |     --------------------------- private associated function defined here
